# SoapVoice

./: .env  .env.example  .gitattributes  .gitignore  AGENTS.md  CompareModel.md  DailyPlanTodo.md  DailyProgress.md  Dockerfile  OFFLINE_README.md  OpnusPlan.md  README.md  RECORDING_SCRIPTS.md  SoapvoiceToApiPlan.md  benchmark_results.json  clinic-promot.md  conftest.py  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  generate_audio.py  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
CliVoice/: CLIVOICE.md
CurrentData/: 解剖学治疗学及化学分类系统  醫療服務給付項目NotebookLM1150316.csv
CurrentData/各种病例规范模板/: 送：住院病历书写基本规范.doc  送：各科病历书写范文(免费完整版).doc  送：病历书写基本要求.doc
agent-harness/: CLIVOICE.md  NOTEBOOKLM_INTEGRATION.md  PROJECT_SUMMARY.md  PUBLISHING.md  README.md  TEST.md  WORKFLOW_GUIDE.md  demo_clivoice.py  example_usage.py  requirements.txt  setup.py
agent-harness/examples/: notebooklm_examples.py
config/: medical_vocabulary.json  models.yaml  nginx.conf  prometheus.yml  websocket.yaml
data/local_db/: medical.db
data/rag/: case_templates.db
docs/: API_INTEGRATION.md  AUDIO_STREAMING_TEST.md  BETA_TEST_FEEDBACK.md  BETA_TEST_PLAN.md  CLI_USAGE.md  DEPLOYMENT.md  MODEL_BENCHMARK_REPORT.md  OPEN_SOURCE_MODELS_REPORT.md  PERFORMANCE_OPTIMIZATION.md  RECORDING_TEST.md  test-page.html
examples/: cli_example_input.txt
scripts/: benchmark_llama.py  benchmark_ollama.py  build_windows.sh  compare_detailed.py  compare_models.py  debug_ws.py  deploy.bat  deploy.sh  deploy_verify.sh  diagnose_ws.py  extended_soapvoice.py  generate_report.py  load_test.py  quick_benchmark.py  quick_start.py  run_beta_test.sh  run_tests.py  setup_ollama.sh  soapvoice_engine.py  test_coverage.sh  test_docker.sh  test_e2e.py  test_models.py  test_recording.py  test_websocket_simple.py  test_ws_fixed.py  verify-hardware.sh
skills/skillOfmedicorder/: medicalorderupdate.md
skills/skilldeepseek-drug-summarizer/: INDEX.md  QUICK-START.md  SKILL.md  WORKFLOW.md
skills/soapclass/: SOAP_CLASSIFICATION_SUMMARY.md  SOAP_CLASSIFIER_GUIDE.md  SOAP_KEYWORDS_REFERENCE.md  soap-classifier.js
src/: __init__.py  cli.py  cli_typer.py  main.py  offline_server.py
src/api/: __init__.py  consultation_api.py  extended_api.py  file_monitor_api.py  rest.py  webhook_api.py  websocket.py
src/asr/: __init__.py  asr_factory.py  qwen3asr_model.py  recording_session.py  stream_transcriber.py  vocabulary.py  whisper_model.py
src/consultation/: __init__.py  consultation_flow.py  realtime_search.py  session_manager.py
src/db/: __init__.py  atc_classification.py  initialize_database.py  integration_example.py  local_database.py  supplement_case_templates.py
src/llm/: __init__.py  doctor_consultation.py  dual_engine.py  llama_engine.py  ollama_engine.py  vllm_engine.py
src/nlp/: __init__.py  icd10_classifier.py  soap_classifier.py  (+1 more)
static/: index.html
tests/: test_asr.py  test_init.py  test_llm_benchmark.py  test_nlp.py  test_recording.py  test_rest_api.py  test_soap.py  test_vllm.py  test_vocabulary.py
(+828 files in other folders)
